# the-eisen-core

./: README.md
auth/: .dockerignore  .env.example  Dockerfile  PLAN.md  README.md  cloudbuild.yaml  package.json
core/: .env.example  .gitignore  Cargo.toml  FUTURE.md  HYBRID_MASTRA_DSPY.md  LIBSQL_ENCRYPT.md  PAID_INTEGRATION.md  README.md  TAURI.md  TODO.md  biome.json  build-core.sh  build-extensions.sh  package-lock.json  package.json
core/agent/: TESTING.md  pyproject.toml
core/agent/phase_specs/: phase_0.md  phase_3.md
core/agent/src/eisen_agent/: acp_session.py  cli.py  config.py  ext_protocol.py  lifecycle.py  router.py  zones.py
core/agent/src/eisen_agent/signatures/: assign.py  evaluate.py
core/agent/src/eisen_agent/training/: agent_stats.py
core/agent/tests/: test_agent_stats.py  test_blocked_listener.py  test_compile.py  test_cost.py  test_perf.py  test_persistence.py  test_signatures.py
core/core/: ADD_LANGUAGES.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  Cargo.toml  INTEGRATION_GUIDE.md  README.md  TESTING.md  test_validation.sh
core/core/examples/: manual_tree.rs  parse_directory.rs
core/core/src/: extract.rs  flatten.rs  lib.rs  main.rs  orchestrator.rs  proxy.rs  session_registry.rs  tcp.rs  tracker.rs  types.rs
core/core/src/parser/: mod.rs  serialize.rs  tests.rs  tree.rs  types.rs  walk.rs
core/core/src/parser/languages/: mod.rs  python.rs  rust.rs  typescript.rs
core/core/tests/: integration_tests.rs  wire_format.rs  zone_tests.rs
website/: .env.example  .gitignore  FRONTEND.md  README.md  next.config.ts  package.json  (+1 more)
(+272 files in other folders)
