[package]
name = "eisen-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
agent-client-protocol-schema = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parser deps (tree-sitter + filesystem walking)
indextree = "4.6"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-rust = "0.20"
walkdir = "2"
ignore = "0.4"
once_cell = "1"
log = "0.4"
tiktoken-rs = "0.6"

[dev-dependencies]
tempfile = "3"
